k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sosame-web-service
spec:
  ports:
  - name: http
    port: 9000
  selector:
    app: sosame-web
